<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt-BR">
    <string name="app_name">UNES</string>
    <string name="login_welcome_to_unes">Boas-vindas ao UNES</string>
    <string name="login_first_steps">Primeiros passos</string>
    <string name="login_unes_single_help">A maneira mais fácil de acessar o Sagres</string>
    <string name="unes_image">UNES Imagem</string>
    <string name="login_access_account">Acessar o UNES</string>
    <string name="login_using_sagres_account">Entre utilizando a conta do Sagres</string>
    <string name="login_user">Usuário</string>
    <string name="login_password">Senha</string>
    <string name="login_sign_in">Entrar</string>
    <string name="login_about_unes">Sobre o UNES</string>
    <string name="login_text_preparing_rockets">Preparando os Foguetes</string>
    <string name="user_image_transition" translatable="false">user_image_transition</string>
    <string name="label_schedule">Horário</string>
    <string name="label_dashboard">Painel de Controle</string>
    <string name="label_messages">Mensagens</string>
    <string name="label_grades_disciplines">Notas e Disciplinas</string>
    <string name="label_calendar">Calendário Acadêmico</string>
    <string name="label_events">Eventos</string>
    <string name="label_services">Serviços</string>
    <string name="label_reminders">Lembretes</string>
    <string name="label_adventure">Aventura</string>
    <string name="label_settings">Configurações</string>
    <string name="label_about_app">Sobre o Aplicativo</string>
    <string name="label_definitions">Definições</string>
    <string name="label_logout">Sair</string>
    <string name="label_open_source_libraries">Licenças de Código Aberto</string>
    <string name="label_today_schedule">Aulas de Hoje</string>
    <string name="discipline_icon">Ícone da disciplina</string>
    <string name="label_recent_messages">Mensagens</string>
    <string name="login_no_account_message">Ainda não tem uma conta? Passe no vestibular</string>
    <string name="there_is_no_vestibular_anymore">\"Mas não tem vestibular\"\nEntão faça o ENEM, você entendeu</string>
    <string name="label_evaluate_recent_class">Avalie aula recente</string>
    <string name="error_too_small">Muito curto</string>
    <string name="error_invalid_credentials">Usuário ou senha incorretos</string>
    <string name="error_invalid_connect_error_with_code">Falha ao autorizar conexão (%1$d)</string>
    <string name="error_login_failed">Login Incorreto</string>
    <string name="error_connection_failed">Erro de conexão</string>
    <string name="error_network_error">Falha de conexão</string>
    <string name="error_unexpected_response">O Sagres não respondeu corretamente</string>
    <string name="error_unexpected_response_joke">Parece que o Portal ta fora do ar de novo. Normal...</string>
    <string name="login_connected">Conectado</string>
    <string name="login_hello_user">Olá %1$s</string>
    <string name="default_firebase_notification_channel_id" translatable="false">com.forcetower.uefs.GENERAL.REMOTE</string>
    <string name="message_received_date_format">Mensagem recebida %1$s</string>
    <string name="message_received_date_ago_format">Mensagem recebida %1$s atrás</string>
    <string name="label_menu">Menu</string>
    <string name="label_grades_disciplines_short">Disciplinas</string>
    <string name="data_step_format">Passo %1$d de %2$d: %3$s</string>
    <string name="step_delete_database">Apagando dados</string>
    <string name="step_logging_in">Fazendo login</string>
    <string name="step_login_bypassed">O login foi pulado... Esse captcha estraga coisas</string>
    <string name="step_finding_profile">Buscando perfil</string>
    <string name="step_fetching_messages">Buscando mensagens</string>
    <string name="step_fetching_semesters">Buscando semestres</string>
    <string name="step_moving_to_start_page">Movendo para página inicial</string>
    <string name="step_fetching_grades">Buscando notas</string>
    <string name="label_terms_and_conditions_p1">Ao continuar, você concorda com os</string>
    <string name="label_terms_and_conditions_p2">[Termos de Serviço](https://github.com/ForceTower/Melon/blob/development/privacy_policy.md) e a [Política de Privacidade](https://github.com/ForceTower/Melon/blob/development/privacy_policy.md)</string>
    <string name="about_unes_0">UNES é uma ferramenta para auxiliar os estudantes durante a vida universitária. O UNES irá periodicamente buscar os dados disponibilizados no [Portal Sagres](http://academico2.uefs.br/Portal/Acesso.aspx) e irá te mandar notificações quando alguma mudança nos dados for detectada. Este não é um aplicativo oficial ou foi endorsado pela Tecnotrends.</string>
    <string name="about_unes_1">O UNES foi feito por João Paulo Sena (Seará)</string>
    <string name="about_unes_2" translatable="false">[Facebook](https://facebook.com/ForceTower) | [GitHub](https://github.com/ForceTower)</string>
    <string name="about_unes_3">Versão %1$s</string>
    <string name="about_unes_4">Código %1$d</string>
    <string name="acc_contributor_image">Imagem do contribuidor</string>
    <string name="acc_developer_image">Imagem do Desenvolvedor</string>
    <string name="acc_user_image">Imagem de Usuário</string>
    <string name="label_contributors_calling">Pessoas que contribuíram com o projeto no GitHub</string>
    <string name="settings_choice_score_title">Utilizar score calculado?</string>
    <string name="settings_choice_score_info">O valor calculado é uma estimativa com base nas suas notas</string>
    <string name="settings_choice_score_info_on">Usando o score calculado</string>
    <string name="settings_choice_score_info_off">Usando o score SAGRES</string>
    <string name="label_your_score">Seu score é %1$.1f</string>
    <string name="acc_no_schedule_defined">Horários não foram encontrados</string>
    <string name="label_schedule_not_found">Horário não foi encontrado</string>
    <string name="label_schedule_retry">Não se preocupe, o UNES tentará novamente</string>
    <string name="btn_siecomp_schedule">Programação SIECOMP</string>
    <string name="filters">Filtros</string>
    <string name="label_siecomp_schedule">Programação</string>
    <string name="label_big_tray">Bandejão</string>
    <string name="label_profile">Perfil</string>
    <string name="label_documents">Documentos</string>
    <string name="bug_report">Bugs, Comentários e Sugestões</string>
    <string name="label_sync_registry">Registro de Sincronização</string>
    <string name="label_library">Biblioteca [Em breve]</string>
    <string name="settings_sync_type_label">Tipo de Sincronizador</string>
    <string name="settings_sync_type_info_label">Escolha como os dados são atualizados</string>
    <string name="settings_sync_frequency_label">Frequência</string>
    <string name="settings_sync_frequency_info_label">Define a frequência de atualização dos dados</string>
    <string name="settings_sync_auto_proxy_label">Proxy [Em testes]</string>
    <string name="settings_sync_auto_proxy_info_label">Detectar a rede interna automaticamente para utilizar o proxy</string>
    <string name="settings_proxy_label">Proxy</string>
    <string name="settings_proxy_info_label">Defina o proxy a ser utilizado</string>
    <string name="settings_ntf_message_teacher">Recados</string>
    <string name="settings_ntf_message_teacher_info">Notificar quando um professor postar um recado</string>
    <string name="settings_ntf_message_uefs">Avisos</string>
    <string name="settings_ntf_message_uefs_info">Notificar quando receber um aviso da Universidade</string>
    <string name="settings_ntf_grade_create">Avaliação Criada</string>
    <string name="settings_notification_messages_label">Notificações de Mensagens</string>
    <string name="settings_notification_grades_label">Notificações de Nota</string>
    <string name="settings_ntf_grade_create_info">Avaliação postada sem nota definida</string>
    <string name="settings_ntf_grade_date">Data da Avaliação</string>
    <string name="settings_ntf_grade_date_info">Data da avaliação alterada pelo professor</string>
    <string name="settings_ntf_grade_change">Nota Alterada</string>
    <string name="settings_ntf_grade_change_info">Nota foi modificada pelo professor</string>
    <string name="settings_ntf_grade_posted">Nota Divulgada</string>
    <string name="settings_ntf_grade_posted_info">Resultado da avaliação está disponível</string>
    <string name="settings_ntf_grade_spoiler">Spoiler da Nota</string>
    <string name="settings_ntf_grade_spoiler_info">Cuidado, spoilers podem ser cruéis</string>
    <string name="settings_ntf_event_created">Eventos</string>
    <string name="settings_ntf_event_created_info">Um evento foi criado</string>
    <string name="settings_notification_general_label">Notificações Gerais</string>
    <string name="settings_acc_semester">Semestre</string>
    <string name="settings_acc_semester_info">Mostrar o semestre pode ser ofensivo</string>
    <string name="settings_acc_score">Score</string>
    <string name="settings_acc_score_info">O score é o mais ofensivo de todos</string>
    <string name="settings_adv_auto_start">Auto inicialização</string>
    <string name="settings_adv_auto_start_info">Algumas marcas impedem a auto inicialização do aplicativo, isso tentará te levar ao lugar correto</string>
    <string name="settings_adv_battery_optimization">Otimizações da bateria</string>
    <string name="settings_adv_battery_optimization_info">Marcas proibem execução se o aplicativo está &quot;fechado&quot;, veja como resolver (em inglês)</string>
    <string name="settings_adv_cat_execution">Execução</string>
    <string name="settings_adv_cat_execution_info">Correções rápidas para execução em segundo plano</string>
    <string name="settings_adv_cat_dynamic_feature">Funções Dinâmicas</string>
    <string name="settings_adv_cat_dynamic_feature_info">Insere ou remove funções do aplicativo</string>
    <string name="settings_adv_dynamic_feature_aeri">Notícias AERI</string>
    <string name="settings_adv_dynamic_feature_aeri_info">Controla se a aba é mostrada e se a função deve ser instalada ou não</string>
    <string name="label_demand_title">Demanda Web</string>
    <string name="label_evaluation">Paradoxo de Zhonyas</string>
    <string name="label_purchases">Doações e Itens</string>
    <string name="label_services_follow_up">Solicitações de Serviços</string>
    <string name="label_mech_calculator" translatable="false">Final Countdown</string>
    <string name="settings_theme_menu">Menu do tema escuro</string>
    <string name="settings_theme_menu_desc_enabled">Menu do tema está visível</string>
    <string name="settings_theme_menu_desc_disabled">Menu do tema está oculto</string>
    <string name="sagres_functions">Extras</string>
    <string name="settings_schedule_empty_spaces">Dias vazios</string>
    <string name="settings_schedule_empty_spaces_info_on">O UNES mostrará dias sem aulas no horário</string>
    <string name="settings_schedule_empty_spaces_info_off">O UNES não mostrará dias sem aulas no horário</string>
    <string name="label_flowchart">Fluxograma Interativo</string>
    <string name="label_theme_editor">Editor de tema</string>
    <string name="settings_adv_doze_mode">Ignorar modo doze</string>
    <string name="settings_adv_doze_mode_info">Em algumas marcas, ignorar o modo doze resolve os problemas de sincronização</string>
    <string name="settings_adv_ignore_battery_xiaomi">Remover restrições de bateria</string>
    <string name="settings_adv_ignore_battery_xiaomi_info">Remover as restricoes da bateria melhora os problemas de sincronização</string>
    <string name="campus_map">Mapa do Campus</string>
    <string name="settings_adv_dynamic_feature_maps">Mapa do campus</string>
    <string name="settings_adv_dynamic_feature_maps_info">Controla se a função do mapa deve ser instalada/desinstalada</string>
</resources>