<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~ João Paulo Sena <joaopaulo761@gmail.com>
  ~
  ~ This file is part of the UNES Open Source Project.
  ~
  ~ UNES is licensed under the MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:defaultValue="true"
        android:key="stg_acc_semester"
        android:title="@string/settings_acc_semester"
        android:summary="@string/settings_acc_semester_info" />
    
    <SwitchPreference
        android:defaultValue="true"
        android:key="stg_acc_score"
        android:title="@string/settings_acc_score"
        android:summary="@string/settings_acc_score_info" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="stg_choice_score"
        android:title="@string/settings_choice_score_title"
        android:summary="@string/settings_choice_score_info"
        android:summaryOn="@string/settings_choice_score_info_on"
        android:summaryOff="@string/settings_choice_score_info_off"/>

    <ListPreference
        android:defaultValue="1"
        android:key="stg_ntf_grade_spoiler"
        android:title="@string/settings_ntf_grade_spoiler"
        android:summary="@string/settings_ntf_grade_spoiler_info"
        android:entries="@array/settings_ntf_grade_spoiler_titles"
        android:entryValues="@array/settings_ntf_grade_spoiler_values"/>

    <SwitchPreference
        app:key="stg_night_mode_menu"
        app:defaultValue="true"
        app:title="@string/settings_theme_menu"
        app:summaryOn="@string/settings_theme_menu_desc_enabled"
        app:summaryOff="@string/settings_theme_menu_desc_disabled"/>

    <SwitchPreference
        app:key="stg_show_empty_day_schedule"
        app:defaultValue="false"
        app:title="@string/settings_schedule_empty_spaces"
        app:summaryOn="@string/settings_schedule_empty_spaces_info_on"
        app:summaryOff="@string/settings_schedule_empty_spaces_info_off"/>
</androidx.preference.PreferenceScreen>
