<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the UNES Open Source Project.
  ~ UNES is licensed under the GNU GPLv3.
  ~
  ~ Copyright (c) 2020. João Paulo Sena <joaopaulo761@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/sagres_functions">
        <menu>
            <group
                android:id="@+id/group_main"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/profile"
                    android:title="@string/label_profile"
                    android:visible="false"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_face_black_24dp"/>

                <item
                    android:id="@+id/purchases"
                    android:title="@string/label_purchases"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_gift_card_black_24dp"/>

                <item
                    android:id="@+id/campus_map"
                    android:title="@string/campus_map"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_baseline_map_24"/>

                <item
                    android:id="@+id/evaluation"
                    android:title="@string/label_evaluation"
                    android:menuCategory="secondary"
                    android:icon="@drawable/hourglass_black_24dp"/>

                <item
                    android:id="@+id/flowchart"
                    android:title="@string/label_flowchart"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_bookmark_border_black_24dp"/>

                <item
                    android:id="@+id/theme_switcher"
                    android:title="@string/label_theme_editor"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_theme_black_24dp"
                    app:contentDescription="theme_editor_name_flag"/>

                <item
                    android:id="@+id/documents"
                    android:title="@string/label_documents"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_description_black_24dp"/>

                <item
                    android:id="@+id/demand"
                    android:title="@string/label_demand_title"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_demand_black_24dp"
                    android:visible="false"/>

                <item
                    android:id="@+id/big_tray"
                    android:title="@string/label_big_tray"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_food_black_24dp"/>

                <item
                    android:id="@+id/calendar"
                    android:title="@string/label_calendar"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_calendar_black_24dp"/>

                <item
                    android:id="@+id/request_services"
                    android:title="@string/label_services_follow_up"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_receipt_black_24dp"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/label_services">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/events"
                    android:title="@string/label_events"
                    android:visible="false"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_event_black_24dp"/>

                <item
                    android:id="@+id/mech_calculator"
                    android:title="@string/label_mech_calculator"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_dvr_black_24dp"/>
    
                <item
                    android:id="@+id/reminders"
                    android:title="@string/label_reminders"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_loyalty_black_24dp"/>
    
                <item
                    android:id="@+id/adventure"
                    android:title="@string/label_adventure"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_games_black_24dp"/>
                
                <item
                    android:id="@+id/library"
                    android:title="@string/label_library"
                    android:visible="false"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_local_library_black_24dp"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/label_definitions">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/about"
                    android:title="@string/label_about_app"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_info_black_24dp"/>

                <item
                    android:id="@+id/settings"
                    android:title="@string/label_settings"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_settings_black_24dp"/>

                <item
                    android:id="@+id/bug_report"
                    android:title="@string/bug_report"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_bug_report_black_24dp"/>

                <item
                    android:id="@+id/sync_registry"
                    android:title="@string/label_sync_registry"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_sync_black_24dp"/>

                <item
                    android:id="@+id/logout"
                    android:title="@string/label_logout"
                    android:menuCategory="secondary"
                    android:icon="@drawable/ic_logout_black_24dp"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/open_source"
        android:title="@string/label_open_source_libraries"
        android:icon="@drawable/ic_copyright_black_24dp"/>
</menu>