<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~ João Paulo Sena <joaopaulo761@gmail.com>
  ~
  ~ This file is part of the UNES Open Source Project.
  ~
  ~ UNES is licensed under the MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        
    <ListPreference
        app:key="stg_sync_worker_type"
        app:defaultValue="0"
        app:title="@string/settings_sync_type_label"
        app:summary="@string/settings_sync_type_info_label"
        app:icon="@drawable/ic_group_work_accent_24dp"
        app:entries="@array/settings_sync_type_titles"
        app:entryValues="@array/settings_sync_type_values" />
    
    <ListPreference
        app:key="stg_sync_frequency"
        app:defaultValue="60"
        app:title="@string/settings_sync_frequency_label"
        app:summary="@string/settings_sync_frequency_info_label"
        app:icon="@drawable/ic_sync_accent_24dp"
        app:entries="@array/settings_sync_frequency_titles"
        app:entryValues="@array/settings_sync_frequency_values" />
    
    <SwitchPreference
        app:key="stg_sync_auto_proxy"
        app:title="@string/settings_sync_auto_proxy_label"
        app:summary="@string/settings_sync_auto_proxy_info_label"
        app:icon="@drawable/ic_parking_accent_30dp"
        app:defaultValue="false" />
    
    <EditTextPreference
        app:key="stg_sync_proxy"
        app:defaultValue="10.65.16.2:3128"
        app:title="@string/settings_proxy_label"
        app:summary="@string/settings_proxy_info_label"
        app:icon="@drawable/ic_http_accent_30dp"
        app:dependency="stg_sync_auto_proxy"/>
</androidx.preference.PreferenceScreen>